@@ -1,3 +1,8 @@
+2004-02-12  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (::tkcon::InitUI): check existence of tcl_platform(os)
+	as it doesn't exist in the Tcl plugin.
+
 2004-02-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl: brought code back to 8.0 compatability.
